Fix issue with jobs not showing on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,17 @@ nav ul li a:hover {
     margin-bottom: 40px;
 }
 
+/* Media Query for Mobile Devices */
+@media screen and (max-width: 768px) {
+    .browse-jobs h2 {
+        font-size: 24px;
+    }
+
+    .browse-jobs p {
+        font-size: 16px;
+    }
+}
+
 /* About Section Styles */
 .about {
     padding: 80px 0;
